--- a/ConceptMapper/pom.xml
+++ b/ConceptMapper/pom.xml
@@ -55,12 +55,19 @@
   
   <properties>
     <uimaScmProject>${project.artifactId}</uimaScmProject>
-    <uimaDependencyVersion>2.4.0</uimaDependencyVersion>
+    <uimaDependencyVersion>2.8.1</uimaDependencyVersion>
     <pearMainDescriptor>desc/analysis_engine/primitive/ConceptMapperOffsetTokenizer.xml</pearMainDescriptor>
     <bookNameRoot>ConceptMapperAnnotatorUserGuide</bookNameRoot>
+    <additionalparam>-Xdoclint:none</additionalparam>
   </properties>
       
   <dependencies>
+    <dependency>
+      <groupId>org.apache.uima</groupId>
+      <artifactId>PearPackagingMavenPlugin</artifactId>
+      <version>2.8.1</version>
+      <scope>compile</scope>
+    </dependency>
     <dependency>
       <groupId>org.apache.uima</groupId>
       <artifactId>uimaj-core</artifactId>
@@ -95,7 +102,26 @@
               </configuration>
             </execution>
           </executions>
-        </plugin>         
+        </plugin>
+        <plugin>
+          <groupId>org.apache.uima</groupId>
+          <artifactId>PearPackagingMavenPlugin</artifactId>
+          <version>2.8.1</version>
+          <extensions>true</extensions>
+          <executions>
+            <execution>
+              <phase>package</phase>
+              <goals>
+                <goal>package</goal>
+              </goals>
+              <configuration>
+                <mainComponentDesc>desc/analysis_engine/primitive/ConceptMapperOffsetTokenizer.xml</mainComponentDesc>
+                <componentId>ConceptMapper</componentId>
+                <datapath>$main_root/resources</datapath>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement> 
     
